pdf2docx/src/parser/object/snapshots/pdf2docx__parser__object__tests__name value.snap
---
source: src/parser/object/tests.rs
expression: parse_dict(buf.as_ref()).unwrap()
---
(
    [],
    Dictionary(
        {
            Name(
                [
                    105,
                    100,
                ],
            ): Name(
                Name(
                    [
                        86,
                        97,
                        108,
                        117,
                        101,
                    ],
                ),
            ),
        },
    ),
)
