pdf2docx/src/parser/object/snapshots/pdf2docx__parser__object__tests__null.snap
---
source: src/parser/object/tests.rs
expression: parse_indirected_object(buf.as_ref()).unwrap()
---
(
    [],
    IndirectObject(
        ObjectId {
            id: 1,
            generation: 0,
        },
        Null,
    ),
)
