pdf2docx/src/parser/object/snapshots/pdf2docx__parser__object__tests__string value.snap
---
source: src/parser/object/tests.rs
expression: parse_dict(buf.as_ref()).unwrap()
---
(
    [],
    Dictionary(
        {
            Name(
                [
                    105,
                    100,
                ],
            ): LiteralString(
                LiteralString(
                    [
                        40,
                        41,
                    ],
                    OnceCell(Uninit),
                ),
            ),
        },
    ),
)
